--- a/config/settings.json
+++ b/config/settings.json
@@ -1,7 +1,7 @@
 {
-  "neo4j_url": "neo4j+s://8f3edb89.databases.neo4j.io",
+  "neo4j_url": "neo4j+s://ID.databases.neo4j.io",
   "neo4j_user": "neo4j",
-  "neo4j_password": "aCdtPLzJeqBS5UQZR3MSCSUic621ezCfVqPH2ew0ZNQ",
+  "neo4j_password": "PASS",
   "neo4j_database": "neo4j",
   "ollama_url": "http://localhost:11434/api/generate",
   "ollama_model": "llama3"
